--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "context": "^2.0.1",
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-ionicons": "^4.2.0",
